# keycloak

./: build.sh  down.sh  readme.md  start.sh
alternatives/rust-backend/: .env  .gitignore  Cargo.toml
alternatives/rust-backend/src/app/api/: mod.rs  postsapi.rs
alternatives/rust-backend/unused/: Dockerfile.slim
backend/: .env  .gitignore  .project  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.musl  build.sh  diesel.toml  pom.xml  start.sh
backend/migrations/00000000001000_create_posts/: up.sql
backend/quarkus/: README.md  pom.xml
backend/quarkus/src/main/java/at/ac/htl/leonding/demo/: Main.java
backend/quarkus/src/main/java/at/ac/htl/leonding/demo/lib/: CsvMessageBodyProvider.java  Responses.java  Store.java
backend/quarkus/src/main/resources/: application.properties
backend/rust/: Dockerfile.builder  readme.md
backend/rust/src/: models.rs
backend/rust/src/app/: mod.rs
backend/rust/src/app/api/: claims.rs  hello.rs
backend/rust/unused/: Dockerfile.builder.old
backend/src/: claims.rs  hello.rs  lib.rs  main.rs  models.rs  posts.rs  pubkey.rs
backend/src/app/api/: claims.rs  postsapi.rs
backend/src/db/: mod.rs
backend/src/main/java/at/ac/htl/leonding/demo/: package-info.java
backend/src/main/java/at/ac/htl/leonding/demo/features/backup/: Backup.java
backend/src/main/java/at/ac/htl/leonding/demo/lib/: Responses.java  RestApplication.java
backend/src/main/java/at/ac/htl/leonding/demo/main/: StartWebSocket.java
backend/src/main/resources/: application.properties
backend/unused/: Dockerfile.builder  Dockerfile.musl
(+275 files in other folders)
