[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.6.0"
serde = "1.0.106"
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
env_logger = "0.11.3"
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
