[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.6.0"
serde = {version = "1.0.106", features=["derive"] }

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
env_logger = "0.11.3"
dotenvy = "0.15"
actix-web-middleware-keycloak-auth = "0.4.2"
port_scanner = "0.1.5"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
once_cell = "1.19.0"

